# 2026_Research_clang-semantic-checks

./: .gitignore  CMakeLists.txt  README.md
include/: PureBugReport.hpp  PureFunctionChecker.hpp  PureState.hpp  PurityUtils.hpp
src/: PureBugReporter.cpp  PureFunctionChecker.cpp  PurityUtils.cpp
tests/: detect_pure_function_test.cpp  global_variable_update_test.cpp  no_body_call.cpp  pointer_write_a.cpp  pointer_write_b.cpp  pointer_write_tests.cpp  pure_and_const_calls.cpp  pure_function_calls_tests.cpp  run_tests.sh  test.cpp
